--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "!git clone https://github.com/ijauregiCMCRC/ALTA2021_tutorial.git\n",
-    "%cd /ALTA2021_tutorial/translation"
+    "%cd ALTA2021_tutorial/translation"
    ]
   },
   {
@@ -99,10 +99,10 @@
     "!mkdir translation_dataset\n",
     "# Download dataset from google drive\n",
     "dataset_link_drive = 'https://drive.google.com/uc?id=1MxrReEXbJPWa3OobANwfzak5rbs5kyNz'\n",
-    "dataset_path = './translation_dataset/IWSLT_2014.zip'\n",
+    "dataset_path = './my_datasets/IWSLT_2014_TEDtalks.zip'\n",
     "gdown.download(dataset_link_drive, dataset_path, quiet=False)\n",
-    "!unzip './translation_dataset/IWSLT_2014.zip' -d './translation_dataset/'\n",
-    "!rm './translation_dataset/IWSLT_2014.zip'"
+    "!unzip './my_datasets/IWSLT_2014_TEDtalks.zip' -d './my_datasets/'\n",
+    "!rm './my_datasets/IWSLT_2014_TEDtalks.zip'"
    ]
   },
   {
@@ -119,14 +119,14 @@
    "outputs": [],
    "source": [
     "args ={\n",
-    "    'train_data': './translation_dataset/IWSLT_2014/es-en/train',  # Path to training data\n",
-    "    'validation_data': './translation_dataset/IWSLT_2014/es-en/dev',  # Path to validation data\n",
-    "    'test_data': './translation_dataset/IWSLT_2014/es-en/test',  # Path to test data\n",
+    "    'train_data': './my_datasets/IWSLT_2014_TEDtalks/es-en/train',  # Path to training data\n",
+    "    'validation_data': './my_datasets/IWSLT_2014_TEDtalks/es-en/dev',  # Path to validation data\n",
+    "    'test_data': './my_datasets/IWSLT_2014_TEDtalks/es-en/test',  # Path to test data\n",
     "    'src': 'en',  # Source language prefix\n",
     "    'tgt': 'es',  # Target language prefix\n",
     "    'max_src_len': 170,  # Maximum number of tokens in the source sentence\n",
     "    'max_tgt_len': 170,  # Maximum number of tokens in the target sentence\n",
-    "    'save_dir': '../models/iwslt_2014/es-en/sshleifer_tiny-mbart',  # Path to save the model and logs\n",
+    "    'save_dir': './models/iwslt_2014/es-en/sshleifer_tiny-mbart',  # Path to save the model and logs\n",
     "    'tokenizer': 'sshleifer/tiny-mbart',  # Pretrained tokenizer\n",
     "    'model': 'sshleifer/tiny-mbart',  # Pretrained model\n",
     "    'add_adapter': False,  # Include adapter training\n",
@@ -135,7 +135,7 @@
     "    'epochs': 1,  # Number of epochs during training\n",
     "    'batch_size': 8,  # Batch size\n",
     "    'grad_accum': 1,  # Gradient accumulation\n",
-    "    'lr': 0.000003,  # Training learning rate\n",
+    "    'lr': 0.00003,  # Training learning rate\n",
     "    'warmup': 500,  # Number of warmup steps\n",
     "    'weight_decay': 0.00003,  # Adam weight decay\n",
     "    'gpus': 1,  # Number of gpus. 0 for CPU\n",
@@ -276,12 +276,6 @@
     "gdown.download(bart_base_with_adapter_url, bart_base_with_adapter_out, quiet=False)\n",
     "!unzip './models/bart_base_with_adapter.zip' -d './models/'\n",
     "!rm './models/bart_base_with_adapter.zip'\n",
-    "# mBART_large\n",
-    "mbart_large_url = 'https://drive.google.com/uc?id=115hpgCILR5FTVD-A972xVR3PdqkT9QZ7'\n",
-    "mbart_large_out = './models/mbart_large.zip'\n",
-    "gdown.download(mbart_large_url, mbart_large_out, quiet=False)\n",
-    "!unzip './models/mbart_large.zip' -d './models/'\n",
-    "!rm './models/mbart_large.zip'\n",
     "# mBART_large_with_adapter\n",
     "mbart_large_wa_url = 'https://drive.google.com/uc?id=1tCGSk021m8aMkYEd7tm_j-Hp2fYwY5e_'\n",
     "mbart_large_wa_out = './models/mbart_large_wa.zip'\n",
@@ -303,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sentence by Alan Turin\n",
+    "# Sentence by Alan Turing\n",
     "sentence = 'Sometimes it is the people no one can imagine anything of who do the things no one can imagine.'"
    ]
   },
@@ -314,12 +308,16 @@
    "outputs": [],
    "source": [
     "print('Loading model...')\n",
-    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/BART_base/training/checkpoints/'\n",
+    "model = LmForTranslation.load_from_checkpoint('./models/BART_base/training/checkpoints/'\n",
     "                                              'check-epoch=00-BLEU=32.51.ckpt')\n",
+    "# Update dataset path (if required)\n",
+    "model.hf_datasets = {'train': args['train_data'],\n",
+    "                     'validation': args['validation_data'],\n",
+    "                     'test': args['test_data']}\n",
     "tp_bart_base, ntp_bart_base = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base = trainer.test(model)[0]['BLEU']\n",
-    "training_time_bart_base = 2972\n",
+    "training_time_bart_base = 2972 / 60\n",
     "inference_time_bart_base = (time.time() - start_time) / 60\n",
     "translation_example_bart_base = model.translate_example(sentence)\n",
     "print('BART_base:')\n",
@@ -340,12 +338,12 @@
    "outputs": [],
    "source": [
     "print('Loading model...')\n",
-    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/BART_base_with_adapter/training/checkpoints'\n",
+    "model = LmForTranslation.load_from_checkpoint('./models/BART_base_with_adapter/training/checkpoints/'\n",
     "                                              'check-epoch=00-BLEU=20.97.ckpt')\n",
     "tp_bart_base_plus_adapter, ntp_bart_base_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base_plus_adapter = trainer.test(model)[0]['BLEU']\n",
-    "training_time_bart_base_plus_adapter = 1880\n",
+    "training_time_bart_base_plus_adapter = 1880 / 60\n",
     "inference_time_bart_base_plus_adapter = (time.time() - start_time) / 60\n",
     "translation_example_bart_base_plus_adapter = model.translate_example(sentence)\n",
     "print('BART_base_plus_adapter:')\n",
@@ -373,39 +371,12 @@
    "outputs": [],
    "source": [
     "print('Loading model...')\n",
-    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/mBART_large/training/checkpoints/'\n",
-    "                                              'check-epoch=00-BLEU=36.47.ckpt')\n",
-    "tp_mbart_large, ntp_mbart_large = model.num_parameters()\n",
-    "start_time = time.time()\n",
-    "test_bleu_mbart_large = trainer.test(model)[0]['BLEU']\n",
-    "training_time_mbart_large = 8923\n",
-    "inference_time_mbart_large = (time.time() - start_time) / 60\n",
-    "translation_example_mbart_large = model.translate_example(sentence)\n",
-    "print('mBART_large:')\n",
-    "print('-----------------')\n",
-    "print('Trainable parameters: ', tp_mbart_large)\n",
-    "print('Non-trainable parameters: ', ntp_mbart_large)\n",
-    "print('Total parameters: ', tp_mbart_large + ntp_mbart_large)\n",
-    "print('-----------------')\n",
-    "print('Test BLEU: ', test_bleu_mbart_large)\n",
-    "print('Training time: ', training_time_mbart_large, ' mins')\n",
-    "print('Inference time: ', inference_time_mbart_large, ' mins')\n",
-    "print('Translation example-> ', translation_example_mbart_large)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('Loading model...')\n",
-    "model = LmForTranslation.load_from_checkpoint('../models/iwslt_2014/es-en/mBART_large_plus_adapter/training/'\n",
+    "model = LmForTranslation.load_from_checkpoint('./models/mBART_large_plus_adapter/training/'\n",
     "                                              'checkpoints/check-epoch=00-BLEU=34.48.ckpt')\n",
     "tp_mbart_large_plus_adapter, ntp_mbart_large_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_mbart_large_plus_adapter = trainer.test(model)[0]['BLEU']\n",
-    "training_time_mbart_large_plus_adapter = 4258\n",
+    "training_time_mbart_large_plus_adapter = 4258 / 60\n",
     "inference_time_mbart_large_plus_adapter = (time.time() - start_time) / 60\n",
     "translation_example_mbart_large_plus_adapter = model.translate_example(sentence)\n",
     "print('mBART_large_plus_adapter:')\n",
@@ -433,8 +404,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_names = ['BART_base', 'BART_base (wa)', 'mBART_large', 'mBART_large (wa)']\n",
-    "colors = ['black', 'red', 'blue', 'green']"
+    "x_names = ['BART_base', 'BART_base (wa)', 'mBART_large (wa)']\n",
+    "colors = ['black', 'red', 'green']"
    ]
   },
   {
@@ -445,7 +416,7 @@
    "source": [
     "# BLEU Scores\n",
     "plt.bar(x_names,\n",
-    "       [test_bleu_bart_base, test_bleu_bart_base_plus_adapter, test_bleu_mbart_large, test_bleu_mbart_large_plus_adapter],\n",
+    "       [test_bleu_bart_base, test_bleu_bart_base_plus_adapter, test_bleu_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "plt.ylim((30,36))\n",
     "plt.ylabel('BLEU')\n",
@@ -462,18 +433,15 @@
     "# Training time vs inference time\n",
     "fig, axs = plt.subplots(1,2, figsize=(15,5))\n",
     "axs[0].bar(x_names,\n",
-    "       [training_time_bart_base, training_time_bart_base_plus_adapter, training_time_mbart_large, training_time_mbart_large_plus_adapter],\n",
+    "       [training_time_bart_base, training_time_bart_base_plus_adapter, training_time_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[0].set_ylabel('mins')\n",
-    "axs[0].set_xticklabels(rotation = 45)\n",
     "axs[0].set_title('training time')\n",
     "axs[1].bar(x_names,\n",
-    "       [inference_time_bart_base, inference_time_bart_base_plus_adapter, inference_time_mbart_large, inference_time_mbart_large_plus_adapter],\n",
+    "       [inference_time_bart_base, inference_time_bart_base_plus_adapter, inference_time_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[1].set_ylabel('mins')\n",
-    "axs[1].set_xticklabels(rotation = 45)\n",
-    "axs[1].set_title('inference time')\n",
-    "#plt.ylim((30,36))"
+    "axs[1].set_title('inference time')"
    ]
   },
   {
@@ -485,22 +453,19 @@
     "# Model size\n",
     "fig, axs = plt.subplots(1,3, figsize=(15,5))\n",
     "axs[0].bar(x_names,\n",
-    "       [tp_bart_base, tp_bart_base_plus_adapter, tp_mbart_large, tp_mbart_large_plus_adapter],\n",
+    "       [tp_bart_base, tp_bart_base_plus_adapter, tp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[0].set_ylabel('Million')\n",
-    "axs[0].set_xticklabels(rotation = 45)\n",
     "axs[0].set_title('# trainable parameters')\n",
     "axs[1].bar(x_names,\n",
-    "       [ntp_bart_base, ntp_bart_base_plus_adapter, ntp_mbart_large, ntp_mbart_large_plus_adapter],\n",
+    "       [ntp_bart_base, ntp_bart_base_plus_adapter, ntp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[1].set_ylabel('Million')\n",
-    "axs[1].set_xticklabels(rotation = 45)\n",
     "axs[1].set_title('# non-trainable parameters')\n",
     "axs[2].bar(x_names,\n",
-    "       [tp_bart_base + ntp_bart_base, tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter, tp_mbart_large + ntp_mbart_large, tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter],\n",
+    "       [tp_bart_base + ntp_bart_base, tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter, tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter],\n",
     "       color=colors)\n",
     "axs[2].set_ylabel('Million')\n",
-    "axs[2].set_xticklabels(rotation = 45)\n",
     "axs[2].set_title('# total parameters')"
    ]
   },
@@ -515,8 +480,6 @@
     "print(' -> ', translation_example_bart_base)\n",
     "print('BART_base_plus_adaptr:')\n",
     "print(' -> ', translation_example_bart_base_plus_adapter)\n",
-    "print('mBART_large:')\n",
-    "print(' -> ', translation_example_mbart_large)\n",
     "print('mBART_large_plus_adapter:')\n",
     "print(' -> ', translation_example_mbart_large_plus_adapter)"
    ]
