--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -6,17 +6,23 @@
     "collapsed": true
    },
    "source": [
-    "# Translation notebook\n",
+    "# Neural Machine Translation (NMT) model training\n",
     "\n",
-    "This is the notebook for translation\n",
-    "\n",
-    "(More descriptions)"
+    "In this section of the tutorial we show how quickly to train a\n",
+    "state-of-the-art NMT model, by leveraging pretrained BART (Lewis et al., 2019) and mBART (aka multilingual BART)\n",
+    "models available in [Huggingface](https://huggingface.co/). Additionally, we show how train a model using\n",
+    "adapters from the [AdapterHub](https://adapterhub.ml/)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
+    "### Setup\n",
     "#### (Only for  Google Colab Execution)\n",
     "\n",
     "If you are running the notebook in Google Colab, run the cell below to download the repository witht he required files to run the models and the requirements file."
@@ -52,6 +58,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Task 1\n",
+    "\n",
+    "- Train an evaluate a `tiny-bart` model with.\n",
+    "- Understand how to use the `pl.LightningModule`.\n",
+    "- Understand the arguments required to define the model architecture and the model training.\n",
+    "\n",
     "### 1. Import packages"
    ]
   },
@@ -86,7 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Download dataset"
+    "### 2. Download dataset\n",
+    "(explain what the dataset is, language pair and how it has been preprocessed)"
    ]
   },
   {
@@ -109,7 +122,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Define parameters"
+    "### 3. Define parameters\n",
+    "(explain the main parameters, such as the model)"
    ]
   },
   {
@@ -148,7 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Initialize Lightning module"
+    "### 4. Initialize Lightning module\n",
+    "(explain the main classes, LMForTranslation, TestTubeLogger and ModelCheckpoint)"
    ]
   },
   {
@@ -216,7 +231,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Train model"
+    "### 5. Train model\n",
+    "\n",
+    "Simply call `trainer.fit()` with your lightning model and the training will start."
    ]
   },
   {
@@ -235,7 +252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Test model"
+    "### 6. Test model\n",
+    "\n",
+    "(explain that the result is reported in terms of BLEU score)"
    ]
   },
   {
@@ -252,7 +271,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Comparing models"
+    "## Task 2: Comparing models\n",
+    "- Compare models that have been previously trained by us with the same code and same dataset.\n",
+    "\n",
+    "Explain the different models:"
    ]
   },
   {
