--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -9,7 +9,7 @@
     "# Neural Machine Translation (NMT) model training\n",
     "\n",
     "In this section of the tutorial we show how quickly to train a\n",
-    "state-of-the-art NMT model, by leveraging pretrained BART (Lewis et al., 2019) and mBART (aka multilingual BART)\n",
+    "state-of-the-art NMT model, by leveraging pretrained BART (Lewis et al., 2019) and mBART (multilingual BART)\n",
     "models available in [Huggingface](https://huggingface.co/). Additionally, we show how train a model using\n",
     "adapters from the [AdapterHub](https://adapterhub.ml/)."
    ]
@@ -42,7 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Install requirements"
+    "#### Install requirements\n",
+    "__Note__: You may have to re-start the runtime environment in Google Colab after\n",
+    "installing the requried packages."
    ]
   },
   {
@@ -59,12 +61,12 @@
    "metadata": {},
    "source": [
     "## Task 1\n",
-    "\n",
-    "- Train an evaluate a `tiny-bart` model with.\n",
-    "- Understand how to use the `pl.LightningModule`.\n",
+    "Covers:\n",
+    "- How to Train an evaluate a `tiny-bart` model.\n",
+    "- Understand how to use the `pl.LightningModule` and`pl.Trainer`.\n",
     "- Understand the arguments required to define the model architecture and the model training.\n",
     "\n",
-    "### 1. Import packages"
+    "### Import packages"
    ]
   },
   {
@@ -91,6 +93,7 @@
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "# Custom LightningModule\n",
     "from src.translation_lightning_model import LmForTranslation"
    ]
   },
@@ -98,8 +101,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Download dataset\n",
-    "(explain what the dataset is, language pair and how it has been preprocessed)"
+    "### Download dataset\n",
+    "We use the [IWSLT 2014 TED Talks](https://sites.google.com/site/iwsltevaluation2014/home) transcripts\n",
+    "English to Spanish translation dataset. This is common benchmark used by the NLP community for\n",
+    "machine translation research.\n",
+    "\n",
+    "We provide a Google Drive link to download the dataset with minimum preprocessing (i.e. sentence alignment,\n",
+    "remove sentences longer than 170 tokens) and our train (~180,000 sentences), dev (~900 sentences)  and test\n",
+    "(~4,700 sentences) splits."
    ]
   },
   {
@@ -122,8 +131,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Define parameters\n",
-    "(explain the main parameters, such as the model)"
+    "### Hyper-parameters\n",
+    "The following hyperparameters define the architecture of the NMT model, the training, validation and test sets,\n",
+    "and various aspects of the training job (e.g. number of epocjs, loss functions, learning rate, batch size...).\n",
+    "\n",
+    "__Note__: In this exercise we are using a `sshleifer/tiny-mbart`\n",
+    "[model from Huggingface](https://huggingface.co/sshleifer/tiny-mbart). As the name indicates, this is\n",
+    "a very small model (~500K parameters), and it doesn't have enough capacity to learn the translation task,\n",
+    "but is a good model to test that the code works. Feel free to change the model."
    ]
   },
   {
@@ -140,7 +155,7 @@
     "    'tgt': 'es',  # Target language prefix\n",
     "    'max_src_len': 170,  # Maximum number of tokens in the source sentence\n",
     "    'max_tgt_len': 170,  # Maximum number of tokens in the target sentence\n",
-    "    'save_dir': './models/iwslt_2014/es-en/sshleifer_tiny-mbart',  # Path to save the model and logs\n",
+    "    'save_dir': './models/sshleifer_tiny-mbart',  # Path to save the model and logs\n",
     "    'tokenizer': 'sshleifer/tiny-mbart',  # Pretrained tokenizer\n",
     "    'model': 'sshleifer/tiny-mbart',  # Pretrained model\n",
     "    'add_adapter': False,  # Include adapter training\n",
@@ -162,8 +177,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Initialize Lightning module\n",
-    "(explain the main classes, LMForTranslation, TestTubeLogger and ModelCheckpoint)"
+    "### Initialize Lightning module\n",
+    "- We initialize the random, numpy, torch and cuda with the same seed.\n",
+    "- We initialize our custom LightningModule (`LmForTranslation`).\n",
+    "- We initialize the logger to capture training information.\n",
+    "- We create a checkpointing callback to save the best model during training.\n",
+    "- We define the Pytorch Lightning trainer."
    ]
   },
   {
@@ -231,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Train model\n",
+    "### Train model\n",
     "\n",
     "Simply call `trainer.fit()` with your lightning model and the training will start."
    ]
@@ -252,9 +271,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Test model\n",
+    "### Test model\n",
     "\n",
-    "(explain that the result is reported in terms of BLEU score)"
+    "__Note__: `tiny-mbart` model cannot achieve a good BLEU score. Try to train other models, for more epochs..."
    ]
   },
   {
@@ -272,10 +291,29 @@
    "metadata": {},
    "source": [
     "## Task 2: Comparing models\n",
-    "- Compare models that have been previously trained by us with the same code and same dataset.\n",
+    "- Compare different NMT models that have been previously trained by us with the same code and same dataset.\n",
+    "- We have used the same hyperparameters except `tokenizer`, `model` and `add_adapter`.\n",
     "\n",
-    "Explain the different models:"
+    "### Our models:\n",
+    "- __BART_base__:\n",
+    "    - Tokenizer and model: `facebook/bart-base` ([Huggingface link](https://huggingface.co/facebook/bart-base))\n",
+    "    - Add adapter: `False`\n",
+    "- __BART_base_with_adapter__:\n",
+    "    - Tokenizer and model: `facebook/bart-base` ([Huggingface link](https://huggingface.co/facebook/bart-base))\n",
+    "    - Add adapter: `True`\n",
+    "- __mBART_large_with_adapter__:\n",
+    "    - Tokenizer and model: `facebook/mbart-large-cc25` ([Huggingface link](https://huggingface.co/facebook/mbart-large-cc25))\n",
+    "    - Add adapter: `True`\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Download models"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -324,6 +362,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Run test and inference over example\n",
+    "\n",
+    "#### BART_base"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -353,6 +402,15 @@
     "print('Inference time: ', inference_time_bart_base, ' mins')\n",
     "print('Translation example-> ', translation_example_bart_base)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### BART_base_with_adapter"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -387,6 +445,15 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### mBART_large_with_adapter"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -417,7 +484,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ploting results"
+    "#### Ploting results\n",
+    "\n",
+    "Lets draw some basic barplots to compare the three models."
    ]
   },
   {
@@ -505,6 +574,18 @@
     "print('mBART_large_plus_adapter:')\n",
     "print(' -> ', translation_example_mbart_large_plus_adapter)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Well done!\n",
+    "\n",
+    "You have reach the end of the notebook. Now feel free to change and play with it as much as you like\n",
+    "(hyperparameters, language pairs, models...). Have fun training your own NMT models!"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
