final changes: - readme edited - notebook edited

--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -9,17 +9,55 @@
    "source": [
     "# Summarisation Notebook\n",
     "\n",
-    "In this notebook, we will be running a comparison between a standard BART model and a Longformer Encoder Decoder model. The idea of this comparison is to show the pros and cons of using a long-document transformer, versus a standard pre-trained language model.\n",
+    "In this notebook, we will be running a comparison between a standard BART model and a Longformer Encoder Decoder (LED) model. The idea of this comparison is to show the pros and cons of using a long-document transformer, versus a standard pre-trained language model.\n",
     "\n",
     "To run this notebook, you need to ensure that you have the appropriate virtual environment set up, and have installed the `requirements.txt` file located in `ALTA2021_tutorial/summarisation/`.\n",
     "\n",
     "In case you are unfamiliar with the models, the use of HuggingFace, or PyTorch Lightning, here are links below:\n",
     "\n",
     "* **BART**: https://aclanthology.org/2020.acl-main.703/\n",
-    "* **Longformer**: https://arxiv.org/abs/2004.05150\n",
+    "* **Longformer Encoder Decoder**: https://arxiv.org/abs/2004.05150\n",
     "\n",
     "* **HuggingFace**: https://huggingface.co/\n",
     "* **PyTorch Lightning**: https://www.pytorchlightning.ai/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup\n",
+    "#### (Only for  Google Colab Execution)\n",
+    "\n",
+    "If you are running the notebook in Google Colab, run the cell below to download the repository witht he required files to run the models and the requirements file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/ijauregiCMCRC/ALTA2021_tutorial.git\n",
+    "%cd ALTA2021_tutorial/summarisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Install requirements\n",
+    "__Note__: You may have to re-start the runtime environment in Google Colab after\n",
+    "installing the requried packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install -r requirements.txt"
    ]
   },
   {
@@ -28,7 +66,13 @@
     "id": "CnnQWNi-5V5U"
    },
    "source": [
-    "### 1. Import Packages"
+    "## Task 1\n",
+    "Covers:\n",
+    "- How to train and evaluate a `BART-base` and `LED-base` model.\n",
+    "- Understand how to use the `pl.LightningModule` and`pl.Trainer`.\n",
+    "- Understand the arguments required to define the model architecture and the model training.\n",
+    "\n",
+    "### 1.1 Import Packages"
    ]
   },
   {
@@ -72,11 +116,11 @@
     "id": "FgNeGHZZ5V5X"
    },
    "source": [
-    "### 2. Define Parameters\n",
+    "### 1.2. Define Parameters\n",
     "\n",
     "Here we define a dictionary of arguments which we pass to the Lightning script when loading the model. These will differ depending on the model you use, and the task you are performing.\n",
     "\n",
-    "For this tutorial, Longformer is an architecture that is built on top of BART's pre-trained model weights, so model-specific arguments will be very similar.\n",
+    "For this tutorial, LED is an architecture that is built on top of BART's pre-trained model weights, so model-specific arguments will be very similar.\n",
     "\n",
     "The remainder of the arguments are set by default in the Trainer function in the following section, and are specific to PyTorch Lightning. "
    ]
@@ -132,9 +176,15 @@
     "id": "MPQx19VA5V5Z"
    },
    "source": [
-    "### 3. Initialize Lightning Module\n",
+    "### 1.3. Initialize Lightning Module\n",
     "\n",
-    "In this section, we load the model and dataset we choose to use. In this instance, we are loading a dataset that is stored on the HuggingFace Datasets repository. If you have your own dataset you wish to use for training and testing, please review the link <a href=\"https://huggingface.co/docs/datasets/\" target=\"_blank\">here</a>."
+    "In this section, we load the model and dataset we choose to use. In this instance, we are loading a dataset that is stored on the HuggingFace Datasets repository. If you have your own dataset you wish to use for training and testing, please review the link <a href=\"https://huggingface.co/docs/datasets/\" target=\"_blank\">here</a>.\n",
+    "\n",
+    "- We initialize the random, numpy, torch and cuda with the same seed.\n",
+    "- We initialize our custom LightningModule (`LmForSummarisation`).\n",
+    "- We initialize the logger to capture training information.\n",
+    "- We create a checkpointing callback to save the best model during training.\n",
+    "- We define the Pytorch Lightning trainer."
    ]
   },
   {
@@ -225,17 +275,19 @@
     "id": "YYOshGw25V5c"
    },
    "source": [
-    "### 4. Train Model\n",
+    "### 1.4. Train Model\n",
     "\n",
-    "In this section and the following, we look to train the BART or Longformer model, and evaluate it over a test set. A few points to note about the comparison between the two models:\n",
+    "In this section and the following, we look to train the BART or LED model, and evaluate it over a test set. A few points to note about the comparison between the two models:\n",
     "\n",
-    "* Training time will differ significantly - this is due to the amount of information that either model will need to process. Despite linear attention alleviating quadratic memory complexity, and allowing Longformer to fit in memory, processing much more data will take longer to train compared to BART.\n",
+    "* Training time will differ significantly - this is due to the amount of information that either model will need to process. Despite linear attention alleviating quadratic memory complexity, and allowing LED to fit in memory, processing much more data will take longer to train compared to BART.\n",
     "\n",
-    "* We have chosen to showcase a fraction of the power of BART and Longformer, by restricting their input lengths to 512 and 2048 tokens respectively. This is merely to facilitate the training and testing process. It is worth reminding that Longformer can process up to 16x the maximum input length of BART (16384 vs. 1024 tokens).\n",
+    "* We have chosen to showcase a fraction of the power of BART and LED, by restricting their input lengths to 512 and 2048 tokens respectively. This is merely to facilitate the training and testing process. It is worth reminding that LED can process up to 16x the maximum input length of BART (16384 vs. 1024 tokens).\n",
     "\n",
     "* ROUGE score improvements here are modest, but will increase significantly with longer training times, adequate selection of hyperparameters (e.g. increasing input length, batch size), and the use of the -large variants of these models.\n",
     "\n",
-    "* Summarisation is a computationally heavy task, and can often require a GPU with quite large RAM to utilise the full benefits of either model."
+    "* Summarisation is a computationally heavy task, and can often require a GPU with quite large RAM to utilise the full benefits of either model.\n",
+    "\n",
+    "Simply call `trainer.fit()` with your lightning model and the training will start."
    ]
   },
   {
@@ -297,7 +349,7 @@
     "id": "FGBKK0zS5V5e"
    },
    "source": [
-    "### 5. Test Model"
+    "### 1.5. Test Model"
    ]
   },
   {
@@ -318,9 +370,18 @@
     "id": "ecM0JA0y5V5f"
    },
    "source": [
-    "### 6. Inference\n",
+    "## Task 2: Comparing Models\n",
+    "- Compare different summarisation models that have been previously trained by us with the same code and same dataset.\n",
     "\n",
-    "In this final section, we will load the trained model from the its saved directory and use it purely for inference. We can compare empirically the benefit of using a long-document Transformer such as Longformer for document summarisation."
+    "### Our Models:\n",
+    "- __BART_base__:\n",
+    "    - Tokenizer and model: `facebook/bart-base` ([Huggingface link](https://huggingface.co/facebook/bart-base))\n",
+    "- __Longformer_Encoder_Decoder_base__:\n",
+    "    - Tokenizer and model: `allenai/led-base-16384` ([Huggingface link](https://huggingface.co/allenai/led-base-16384))\n",
+    "    \n",
+    "### 2.1. Inference\n",
+    "\n",
+    "In this final section, we will load the trained model from the its saved directory and use it purely for inference. We can compare empirically the benefit of using a long-document Transformer such as LED for document summarisation."
    ]
   },
   {
@@ -443,7 +504,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load Longformer Model"
+    "#### Load LED Model"
    ]
   },
   {
@@ -490,6 +551,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Well done!\n",
+    "\n",
+    "You have reached the end of the summarisation notebook. Now feel free to change and play with it as much as you like\n",
+    "(hyperparameters, datasets, models...). Have fun training your own summarisation models!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -505,7 +576,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
