one slight change in notebook

--- a/summarisation/train_and_eval_notebook.ipynb
+++ b/summarisation/train_and_eval_notebook.ipynb
@@ -377,7 +377,7 @@
     "- __BART_base__:\n",
     "    - Tokenizer and model: `facebook/bart-base` ([Huggingface link](https://huggingface.co/facebook/bart-base))\n",
     "- __Longformer_Encoder_Decoder_base__:\n",
-    "    - Tokenizer and model: `allenai/led-base-16384` ([Huggingface link](https://huggingface.co/allenai/led-base-16384))\n",
+    "    - Tokenizer and model: `facebook/bart-base` + `allenai/led-base-16384` ([Huggingface link](https://huggingface.co/allenai/led-base-16384))\n",
     "    \n",
     "### 2.1. Inference\n",
     "\n",
