translation notebook comment change

--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -107,8 +107,8 @@
     "machine translation research.\n",
     "\n",
     "We provide a Google Drive link to download the dataset with minimum preprocessing (i.e. sentence alignment,\n",
-    "remove sentences longer than 170 tokens) and our train (~180,000 sentences), dev (~900 sentences)  and test\n",
-    "(~4,700 sentences) splits."
+    "remove sentences longer than 170 tokens) and our train (aprox. 180,000 sentences), dev (aprox. 900 sentences)  and test\n",
+    "(aprox. 4,700 sentences) splits."
    ]
   },
   {
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# Create models folder\n",
-    "!mkdir translation_dataset\n",
+    "!mkdir my_datasets\n",
     "# Download dataset from google drive\n",
     "dataset_link_drive = 'https://drive.google.com/uc?id=1MxrReEXbJPWa3OobANwfzak5rbs5kyNz'\n",
     "dataset_path = './my_datasets/IWSLT_2014_TEDtalks.zip'\n",
