translation notebook comment change

--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -420,6 +420,10 @@
     "print('Loading model...')\n",
     "model = LmForTranslation.load_from_checkpoint('./models/BART_base_with_adapter/training/checkpoints/'\n",
     "                                              'check-epoch=00-BLEU=20.97.ckpt')\n",
+    "# Update dataset path (if required)\n",
+    "model.hf_datasets = {'train': args['train_data'],\n",
+    "                     'validation': args['validation_data'],\n",
+    "                     'test': args['test_data']}\n",
     "tp_bart_base_plus_adapter, ntp_bart_base_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_bart_base_plus_adapter = trainer.test(model)[0]['BLEU']\n",
@@ -462,6 +466,10 @@
     "print('Loading model...')\n",
     "model = LmForTranslation.load_from_checkpoint('./models/mBART_large_plus_adapter/training/'\n",
     "                                              'checkpoints/check-epoch=00-BLEU=34.48.ckpt')\n",
+    "# Update dataset path (if required)\n",
+    "model.hf_datasets = {'train': args['train_data'],\n",
+    "                     'validation': args['validation_data'],\n",
+    "                     'test': args['test_data']}\n",
     "tp_mbart_large_plus_adapter, ntp_mbart_large_plus_adapter = model.num_parameters()\n",
     "start_time = time.time()\n",
     "test_bleu_mbart_large_plus_adapter = trainer.test(model)[0]['BLEU']\n",
