--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -552,17 +552,17 @@
     "# Model size\n",
     "fig, axs = plt.subplots(1,3, figsize=(15,5))\n",
     "axs[0].bar(x_names,\n",
-    "       [tp_bart_base, tp_bart_base_plus_adapter, tp_mbart_large_plus_adapter],\n",
+    "       [tp_bart_base/1000000, tp_bart_base_plus_adapter/1000000, tp_mbart_large_plus_adapter/1000000],\n",
     "       color=colors)\n",
     "axs[0].set_ylabel('Million')\n",
     "axs[0].set_title('# trainable parameters')\n",
     "axs[1].bar(x_names,\n",
-    "       [ntp_bart_base, ntp_bart_base_plus_adapter, ntp_mbart_large_plus_adapter],\n",
+    "       [ntp_bart_base/1000000, ntp_bart_base_plus_adapter/1000000, ntp_mbart_large_plus_adapter/1000000],\n",
     "       color=colors)\n",
     "axs[1].set_ylabel('Million')\n",
     "axs[1].set_title('# non-trainable parameters')\n",
     "axs[2].bar(x_names,\n",
-    "       [tp_bart_base + ntp_bart_base, tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter, tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter],\n",
+    "       [(tp_bart_base + ntp_bart_base)/1000000, (tp_bart_base_plus_adapter + ntp_bart_base_plus_adapter)/1000000, (tp_mbart_large_plus_adapter + ntp_mbart_large_plus_adapter)//1000000],\n",
     "       color=colors)\n",
     "axs[2].set_ylabel('Million')\n",
     "axs[2].set_title('# total parameters')"
