translation notebook comment change

--- a/translation/train_and_eval_notebook.ipynb
+++ b/translation/train_and_eval_notebook.ipynb
@@ -135,8 +135,8 @@
     "The following hyperparameters define the architecture of the NMT model, the training, validation and test sets,\n",
     "and various aspects of the training job (e.g. number of epocjs, loss functions, learning rate, batch size...).\n",
     "\n",
-    "__Note__: In this exercise we are using a `sshleifer/tiny-mbart`\n",
-    "[model from Huggingface](https://huggingface.co/sshleifer/tiny-mbart). As the name indicates, this is\n",
+    "__Note__: In this exercise we are using a `facebook/bart-base`\n",
+    "[model from Huggingface](https://huggingface.co/facebook/bart-base). As the name indicates, this is\n",
     "a very small model (~500K parameters), and it doesn't have enough capacity to learn the translation task,\n",
     "but is a good model to test that the code works. Feel free to change the model."
    ]
@@ -155,9 +155,9 @@
     "    'tgt': 'es',  # Target language prefix\n",
     "    'max_src_len': 170,  # Maximum number of tokens in the source sentence\n",
     "    'max_tgt_len': 170,  # Maximum number of tokens in the target sentence\n",
-    "    'save_dir': './models/sshleifer_tiny-mbart',  # Path to save the model and logs\n",
-    "    'tokenizer': 'sshleifer/tiny-mbart',  # Pretrained tokenizer\n",
-    "    'model': 'sshleifer/tiny-mbart',  # Pretrained model\n",
+    "    'save_dir': './models/facebook_bart_base',  # Path to save the model and logs\n",
+    "    'tokenizer': 'facebook/bart-base',  # Pretrained tokenizer\n",
+    "    'model': 'facebook/bart-base',  # Pretrained model\n",
     "    'add_adapter': False,  # Include adapter training\n",
     "    'reduction_factor': 1,  # Adapter's reduction factor (>= 1)\n",
     "    'label_smoothing': 0.1, # Label smoothing \n",
